Manifests/tekton-is-groovy-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tekton-is-groovy-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: groovy
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: groovy
    spec:
      containers:
        - name: groovy
          image: >-
            image-registry.openshift-image-registry.svc:5000/tekton-is-groovy/tekton-is-groovy:1.0.1-SNAPSHOT
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
