Manifests/tekton-is-groovy-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tekton-is-groovy-route
spec:
  to:
    kind: Service
    name: tekton-is-groovy-service
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
